themes/speps/static/css/main.css
@import url(reset.css);
@import url(boltwire.css);

body
{
    background: #fff url(../images/bg-io.gif) fixed;
    font-family: Verdana, Arial, Helvetica, sans-serif;
    font-size: 10pt;
    color: #000;
}

body, html
{
    height: 100%;
}

#bg-container
{
    z-index: 0;
    position: fixed;
    width: 100%;
    height: 100%;
    left: 0px;
    top: 0px;
}

#bg
{
    background: #fff url(../images/bg-interface-left.gif) repeat-y;
    height: 100%;
    margin: 0px 10%;
}

#bg-right
{
    background: url(../images/bg-interface-right.gif);
    position: fixed;
    width: 3px;
    height: 100%;
    right: 10%;
    top: 0px;
}

#main-container
{
    z-index: 1;
    position: relative;
    margin: 0px 10%;
    padding: 0px 30px;
}

#header
{
    padding: 40px 20px;
}

#header h1
{
    background: url(../images/logo.gif) no-repeat;
    float: left;
}

#header h1 a
{
    display: block;
    width: 162px;
    height: 42px;
    text-indent: -9999px;
}

#header ul
{
    float: left;
    margin: 0px 0px 0px 0px;
    padding: 6px 60px 0px 50px;
    background: url(../images/menu-bg-line.gif) 0px 30px repeat-x;
}

#header ul li
{
    float: left;
}

#header ul li a
{
    color: #006699;
    font-size: 1.2em;
    text-decoration: none;
    display: block;
    height: 28px;
    padding: 0px 0px 0px 0px;
}

#header ul li a:hover .mid
{
    background-position: -48px -40px;
}

#header ul li a:hover .left
{
    background-position: 0px -40px;
}

#header ul li a:hover .right
{
    background-position: -15px -40px;
}

#header ul li a .mid
{
    float: left;
    background: url(../images/menu-bg.gif) -48px 0px repeat-x;
    height: 29px;
    padding: 11px 6px 0px 6px;
    cursor: pointer;
}

#header ul li a .left, #header ul li a .right
{
    float: left;
    display: block;
    width: 15px;
    height: 40px;
}

#header ul li a .left
{
    background: url(../images/menu-bg.gif) 0px 0px no-repeat;
}

#header ul li a .right
{
    background: url(../images/menu-bg.gif) -15px 0px no-repeat;
}

#social
{
    float: left;
    position: relative;
    left: -42px;
    top: 22px;
}

#content
{
    clear: both;
    padding: 0px 40px;
    color: #000;
}

#content img, #content video
{
    max-width: 80%;
    height: auto;
    margin: 0 auto;
    display: block;
}

#content a
{
    color: #003366;
    text-decoration: none;
    border-bottom: 1px dotted #006699;
}

#content a:hover
{
    color: #006699;
    border-bottom: 1px solid #006699;
}

#content h1
{
    clear: both;
    font-size: 1.8em;
    padding-left: 20px;
    margin: 1em auto;
    background: url(../images/bullet-orange.gif) left 50% repeat-y;
}

#content h2
{
    font-size: 1.6em;
    padding-left: 20px;
    margin: 1em auto;
    background: url(../images/bullet-grey.gif) left 50% repeat-y;
}

#content h3
{
    font-size: 1.4em;
    padding-left: 20px;
    margin: 1em auto;
    background: url(../images/bullet-grey.gif) left 50% repeat-y;
}

#content p
{
    margin: 0.5em 0px;
}

#content ul
{
    margin-left: 2em;
    list-style-type: square;
}

#content .highlight
{
    font-size: 0.9em;
    overflow: auto;
    width: 80%;
    font-family: "Courier New", Courier, monospace;
    padding: 0.5em;
    border: 1px solid #006699;
    margin: 0.5em auto;
}

#content .highlight td:nth-child(2)
{
    width: 100%;
}

#actions ul
{
    margin: 0px;
    list-style-type: none;
}

#content .date
{
    font-size: 0.7em;
    color: #aaa;
}

#sideinfo
{
    font-size: 0.7em;
    line-height: 1.4em;
    float: right;
    width: 300px;
    border-left: 1px solid #bbb;
    margin: 0px 0px 0px 20px;
    padding: 20px 0px 20px 20px;
}

#sideinfo p
{
    margin: 0px 0px 0.5em 0px;
}

#actions
{
    padding-bottom: 2em;
}

#actions ul li
{
    float: left;
    margin-right: 1em;
}

#messages, #page-header, #footer
{
    clear: both;
}

#page
{
    font-size: 1em;
    line-height: 2em;
    text-align: left;
}

#footer
{
    border-top: 1px solid #bbb;
    margin: 20px;
    padding: 0.5em 0px 1em 0px;
    text-align: right;
    color: #aaa;
}

#footer a
{
    color: #aaa;
}

